testdata/golden/sema/invalid/concurrency/atomic_invalid_type.sg
// Invalid @atomic - field type is not int, uint, bool, or *T

type BadAtomic = {
    @atomic name: string,
    @atomic data: float,
}
